--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,17 +12,6 @@
         android:textSize="30sp"
         android:gravity="center"/>
 
-    <!--<Button
-        android:id="@+id/fromAlbumBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="From Album"/>
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"/>-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,7 +28,7 @@
             android:id="@+id/ed_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="例如：陈晨"
+            android:hint="例如：abc"
             android:layout_weight="1"/>
     </LinearLayout>
 
